bpo-40116: Add insertion order bit-vector to dict values to allow dicts to share keys more freely. (GH-28520)